# C-Projects

./: README.md
Microcontrollers/: Examen_Modulo2_A01636406.c  Examen_Prueba_2_ A01636406.c  Tarea 2 Micro Parte 1 Terminado.c  Tarea 2 Micro Parte 2 Terminado.c
Robotics/Opencv_video/: CMakeLists.txt
Robotics/Opencv_video/src/: main.cpp
Robotics/Video/: CMakeLists.txt
Robotics/Video/src/: main.cpp
Robotics/Vision_Op1/: CMakeLists.txt
Robotics/Vision_Op1/src/: main.cpp
Robotics/Vision_Op2/: CMakeLists.txt
Robotics/Vision_Op2/src/: main.cpp
Robotics/circle/: CMakeLists.txt
Robotics/circle/src/: main.cpp
Robotics/game/: CMakeLists(1).txt
Robotics/game/src/: main.cpp
Robotics/opencv_gray/: CMakeLists.txt
Robotics/opencv_gray/src/: main.cpp
Robotics/point/: CMakeLists.txt
Robotics/point/include/: point.h
Robotics/point/src/: main.cpp  point.cpp
Robotics/presion/: CMakeLists.txt  setup.sh
Robotics/presion/include/: presion.h
Robotics/presion/src/: main.cpp  presion.cpp
Robotics/ros_ws/src/intro/: CMakeLists.txt  package.xml
Robotics/sort/: CMakeLists.txt
Robotics/sort/data/: Data Comparison.xlsx
Robotics/sort/src/: main.cpp
